jupyterlab/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterlab
  namespace: jupyterlab
  labels:
    name: jupyterlab
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jupyterlab
  template:
    metadata:
      labels:
        name: jupyterlab
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: jupyterlab
          image: jupyter/datascience-notebook:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
          command:
            - /bin/bash
            - -c
            - |
              apt-get update && \
              apt-get install -y openjdk-11-jdk-headless && \
              wget https://github.com/SpencerPark/IJava/releases/download/v1.3.0/ijava-1.3.0.zip && \
              unzip ijava-1.3.0.zip && \
              python3 install.py --sys-prefix
              start.sh jupyter lab --LabApp.token='password' --LabApp.ip='0.0.0.0' --LabApp.allow_root=True --LabApp.base_url=/jupyterlab/
          volumeMounts:
            - name: jupyterlab-data
              mountPath: /home/ubuntu/jupyterhub
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
      restartPolicy: Always
      volumes:
        - name: jupyterlab-data
          persistentVolumeClaim:
            claimName: jupyterlab-pvc
