jupyterlab/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  namespace: jupyterlab
spec:
  selector:
    name: jupyterlab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
