jupyterlab/jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-ingress
  namespace: jupyterlab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /jupyterlab/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: km01.itversity.com
    http:
      paths:
      - path: /jupyterlab(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: jupyterlab
            port:
              number: 80
